[metadata]
name = bipartitepandas
version = 1.0.20
author = Thibaut Lamadon
author_email = thibaut.lamadon@gmail.com
description = Python tools for bipartite labor data
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/tlamadon/bipartitepandas/
project_urls =
    Documentation = https://tlamadon.github.io/bipartitepandas/
    GitHub = https://github.com/tlamadon/bipartitepandas/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    scipy
    scikit-learn
    statsmodels
    igraph
    tqdm
